--- a/PPO_Implementaion/PPO_Breakout_Colab.ipynb
+++ b/PPO_Implementaion/PPO_Breakout_Colab.ipynb
@@ -42,7 +42,7 @@
                 "os.makedirs(f'{DRIVE_PATH}/videos', exist_ok=True)\n",
                 "os.makedirs(f'{DRIVE_PATH}/models', exist_ok=True)\n",
                 "\n",
-                "print(f\"✅ Google Drive mounted at: {DRIVE_PATH}\")\n",
+                "print(f\"Google Drive mounted at: {DRIVE_PATH}\")\n",
                 "print(f\"   Videos: {DRIVE_PATH}/videos\")\n",
                 "print(f\"   Models: {DRIVE_PATH}/models\")"
             ]
